<?xml version="1.0"?>

<!--
     Copyright 2020 Intel Corporation
     SPDX-License-Identifier: Apache 2.0
-->

<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <artifactId>fdo</artifactId>
  <groupId>org.fidoalliance</groupId>
  <version>1.1.6</version>
  <name>Protocol Reference Implementation</name>
  <packaging>pom</packaging>

  <!--
  to update all library and plugin versions to latest releases, use

  mvn versions:update-properties
  -->
  <properties>
    <!-- FDO Dependency Version -->
    <fdo.version>1.1.6</fdo.version>


    <!-- Dependency Version -->
    <bcpkix.version>1.76</bcpkix.version>
    <bcprov.version>1.76</bcprov.version>
    <commons-beanutils.version>1.9.4</commons-beanutils.version>
    <commons-codec.version>1.15</commons-codec.version>
    <commons-text.version>1.10.0</commons-text.version>
    <commons-lang3.version>3.12.0</commons-lang3.version>
    <commons-configuration2.version>2.7</commons-configuration2.version>
    <exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
    <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
    <jackson.version>2.15.0</jackson.version>
    <junit-jupiter.version>5.8.2</junit-jupiter.version>
    <log4j.version>2.17.2</log4j.version>
    <slf4j.version>1.7.36</slf4j.version>
    <hibernate.version>6.1.0.Final</hibernate.version>
    <tomcat.version>10.1.15</tomcat.version>
    <apache-httpcomponents.version>4.5.13</apache-httpcomponents.version>
    <snakeyaml.version>2.0</snakeyaml.version>
    <jackson-dataformat.version>2.15.2</jackson-dataformat.version>
    <jackson-databind.version>2.15.2</jackson-databind.version>
    <cose-java.version>1.1.0</cose-java.version>

    <!-- Database Client Version -->
    <h2db.version>2.2.224</h2db.version>
    <mariadb.version>3.0.5</mariadb.version>
    <mysql.version>8.0.33</mysql.version>
    <postgresql.version>42.5.2</postgresql.version>

    <!-- Maven Version -->
    <maven-checkstyle-plugin.version>3.1.0</maven-checkstyle-plugin.version>
    <maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
    <maven-dependency-plugin.version>3.2.0</maven-dependency-plugin.version>
    <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
    <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
    <maven-project-info-reports-plugin.version>3.1.1</maven-project-info-reports-plugin.version>
    <maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>
    <maven-site-plugin.version>3.9.1</maven-site-plugin.version>
    <maven-surefire-plugin.version>3.0.0</maven-surefire-plugin.version>
    <maven-surefire-report-plugin.version>3.0.0</maven-surefire-report-plugin.version>
    <maven-war-plugin.version>3.3.1</maven-war-plugin.version>
    <pgpverify-plugin.version>1.14.0</pgpverify-plugin.version>

    <!-- Project Configurations -->
    <!-- Project Configurations -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project-demo-directory>../../component-samples/demo</project-demo-directory>


  </properties>

  <modules>
    <module>component-samples</module>
    <module>protocol</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>${junit-jupiter.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>




  <build>
    <pluginManagement>
      <plugins>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-checkstyle-plugin</artifactId>
          <version>${maven-checkstyle-plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>${maven-clean-plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven-compiler-plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>${maven-jar-plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>${maven-resources-plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-site-plugin</artifactId>
          <version>${maven-site-plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven-surefire-plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
          <version>${maven-war-plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.simplify4u.plugins</groupId>
          <artifactId>pgpverify-maven-plugin</artifactId>
          <version>${pgpverify-plugin.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <configuration>
          <configLocation>google_checks.xml</configLocation>
          <consoleOutput>true</consoleOutput>
          <encoding>UTF-8</encoding>
          <failsOnError>false</failsOnError>
          <includeTestResources>false</includeTestResources>
          <linkXRef>false</linkXRef>
          <sourceDirectories>${project.build.sourceDirectory}</sourceDirectories>
          <violationSeverity>warning</violationSeverity>
        </configuration>
        <executions>
          <execution>
            <id>validate</id>
            <phase>validate</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <configuration>
          <source>11</source>
          <target>11</target>
        </configuration>
      </plugin>


      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
      </plugin>

      <plugin>
        <groupId>org.simplify4u.plugins</groupId>
        <artifactId>pgpverify-maven-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
     
    </plugins>
  </build>

  <distributionManagement>
    <site>
      <id>${project.artifactId}-site</id>
      <url>${project.baseUri}</url>
    </site>
  </distributionManagement>


</project>
